[gd_scene load_steps=5 format=1]

[ext_resource path="res://tiles/tiles.tres" type="TileSet" id=1]
[ext_resource path="res://tiles/tiles.gd" type="Script" id=2]
[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scritps/gui.gd" type="Script" id=4]

[node name="FloorController" type="Node2D"]

[node name="map" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 32
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 21, 1, 22, 1, 23, 1, 24, 1, 65536, 1, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 65547, 0, 65548, 0, 65549, 0, 65550, 0, 65551, 0, 65552, 0, 65553, 0, 65554, 0, 65555, 0, 65556, 0, 65557, 0, 65558, 0, 65559, 0, 65560, 1, 131072, 1, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 131088, 0, 131089, 0, 131090, 0, 131091, 0, 131092, 0, 131093, 0, 131094, 0, 131095, 0, 131096, 1, 196608, 1, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 0, 196624, 0, 196625, 0, 196626, 0, 196627, 0, 196628, 0, 196629, 0, 196630, 0, 196631, 0, 196632, 1, 262144, 1, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 0, 262160, 0, 262161, 0, 262162, 0, 262163, 0, 262164, 0, 262165, 0, 262166, 0, 262167, 0, 262168, 1, 327680, 1, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 327696, 0, 327697, 0, 327698, 0, 327699, 0, 327700, 0, 327701, 0, 327702, 0, 327703, 0, 327704, 1, 393216, 1, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 0, 393233, 0, 393234, 0, 393235, 0, 393236, 0, 393237, 0, 393238, 0, 393239, 0, 393240, 1, 458752, 1, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 458768, 0, 458769, 0, 458770, 0, 458771, 0, 458772, 0, 458773, 0, 458774, 0, 458775, 0, 458776, 1, 524288, 1, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 0, 524308, 0, 524309, 0, 524310, 0, 524311, 0, 524312, 1, 589824, 1, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 0, 589843, 0, 589844, 0, 589845, 0, 589846, 0, 589847, 0, 589848, 1, 655360, 1, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 0, 655380, 0, 655381, 0, 655382, 0, 655383, 0, 655384, 1, 720896, 1, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 0, 720915, 0, 720916, 0, 720917, 0, 720918, 0, 720919, 0, 720920, 1, 786432, 1, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 0, 786449, 0, 786450, 0, 786451, 0, 786452, 0, 786453, 0, 786454, 0, 786455, 0, 786456, 1, 851968, 1, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 0, 851978, 0, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 0, 851985, 0, 851986, 0, 851987, 0, 851988, 0, 851989, 0, 851990, 0, 851991, 0, 851992, 1, 917504, 1, 917505, 0, 917506, 0, 917507, 0, 917508, 0, 917509, 0, 917510, 0, 917511, 0, 917512, 0, 917513, 0, 917514, 0, 917515, 0, 917516, 0, 917517, 0, 917518, 0, 917519, 0, 917520, 0, 917521, 0, 917522, 0, 917523, 0, 917524, 0, 917525, 0, 917526, 0, 917527, 0, 917528, 1, 983040, 1, 983041, 0, 983042, 0, 983043, 0, 983044, 0, 983045, 0, 983046, 0, 983047, 0, 983048, 0, 983049, 0, 983050, 0, 983051, 0, 983052, 0, 983053, 0, 983054, 0, 983055, 0, 983056, 0, 983057, 0, 983058, 0, 983059, 0, 983060, 0, 983061, 0, 983062, 0, 983063, 0, 983064, 1, 1048576, 1, 1048577, 1, 1048578, 1, 1048579, 1, 1048580, 1, 1048581, 1, 1048582, 1, 1048583, 1, 1048584, 1, 1048585, 1, 1048586, 1, 1048587, 1, 1048588, 1, 1048589, 1, 1048590, 1, 1048591, 1, 1048592, 1, 1048593, 1, 1048594, 1, 1048595, 1, 1048596, 1, 1048597, 1, 1048598, 1, 1048599, 1, 1048600, 1, 1114112, 1, 1114113, 1, 1114114, 1, 1114115, 1, 1114116, 1, 1114117, 1, 1114118, 1, 1114119, 1, 1114120, 1, 1114121, 1, 1114122, 1, 1114123, 1, 1114124, 1, 1114125, 1, 1114126, 1, 1114127, 1, 1114128, 1, 1114129, 1, 1114130, 1, 1114131, 1, 1114132, 1, 1114133, 1, 1114134, 1, 1114135, 1, 1114136, 1, 1179648, 1, 1179649, 1, 1179650, 1, 1179651, 1, 1179652, 1, 1179653, 1, 1179654, 1, 1179655, 1, 1179656, 1, 1179657, 1, 1179658, 1, 1179659, 1, 1179660, 1, 1179661, 1, 1179662, 1, 1179663, 1, 1179664, 1, 1179665, 1, 1179666, 1, 1179667, 1, 1179668, 1, 1179669, 1, 1179670, 1, 1179671, 1, 1179672, 1 )
script/script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 368.272, 302.528 )

[node name="gui" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="fire_cooldown_text" type="Label" parent="gui"]

margin/left = 104.0
margin/top = 556.0
margin/right = 144.0
margin/bottom = 569.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="water_cooldown_text" type="Label" parent="gui"]

margin/left = 293.0
margin/top = 555.0
margin/right = 333.0
margin/bottom = 568.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="earth_cooldown_text" type="Label" parent="gui"]

margin/left = 517.0
margin/top = 553.0
margin/right = 557.0
margin/bottom = 566.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="air_cooldown_text" type="Label" parent="gui"]

margin/left = 682.0
margin/top = 556.0
margin/right = 722.0
margin/bottom = 569.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health_text" type="Label" parent="gui"]

margin/left = 370.0
margin/top = 520.0
margin/right = 410.0
margin/bottom = 533.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


